[package]
name = "rust-par-http-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
clap = { version = "4.3.0", features = ["derive"] }
csv = "1.2.2"
csv-async = "1.2.6"
futures = "0.3.28"
polars = { version = "0.30.0", features = ["lazy", "dtype-categorical", "dtype-datetime", "performant", "temporal"] }
polars-io = { version = "0.30.0", features = ["parquet"] }
reqwest = { version = "0.11.18", features = ["stream", "gzip", "deflate"] }
tokio = { version = "1.28.2", features = ["rt-multi-thread"] }
